2002-10-01  Yanko Kaneti <yaneti@declera.com>

	* schemas/*.schemas.in: reorder the "applyto" and "key" elements 
	so that the files validate against the gconf dtd.

2002-09-27  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.0

2002-09-27  Alexander Larsson  <alexl@redhat.com>

	* schemas/desktop_gnome_interface.schemas.in:
	Add icon_theme key.

Thu Sep 26 17:25:26 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* schemas/desktop_gnome_interface.schemas.in: 
	Add settings to change preedit/status styles of GTK+ input
	method,	and set callback styles by default (#59076)

2002-09-04  Marius Andreiana <mandreiana@yahoo.com>

	* configure.in: added 'ro' to ALL_LINGUAS

2002-08-28  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.0.3

2002-08-21  Anju P S  <anju.premachandran@wipro.com>
 
 	* libgnome/gnome-exec.c (gnome_execute_async_with_env_fds) :
 	Added code to check the return value of the chdir() call.If chdir
 	call fails the child process may be executed in the wrong directoy.
 
2002-08-15  Mikael Hallendal  <micke@codefactory.se>

	* help-converters/man/gnome-man2html.c:
	(scan_table): applied patch from Kjaartan fixing #77895

2002-08-15  Padraig O'Briain  <padraig.obriain@sun.com>

	* help-converters/info/main.c:
	* help-converters/man/gnome-man2html.c:
	Remove setting of BGCOLOR when writing HTML body tag.
	(bug #90655)

2002-08-05  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.0.2

2002-07-29  Mark McLoughlin  <mark@skynet.ie>

	* monikers/bonobo-config-bag.c:
	(impl_Bonobo_PropertyBag_getKeys),
	(impl_Bonobo_PropertyBag_getType),
	(impl_Bonobo_PropertyBag_getValue),
	(impl_Bonobo_PropertyBag_setValue),
	(impl_Bonobo_PropertyBag_getValues),
	(impl_Bonobo_PropertyBag_getDefault),
	(impl_Bonobo_PropertyBag_getDocTitle),
	(impl_Bonobo_PropertyBag_getDoc),
	(impl_Bonobo_PropertyBag_getFlags): initialise GError* to NULL.
	Should fix crash seen in #89158.
